@@ -1,10 +1,33 @@
 .. class:: thick
 
 +-------------------+--------------------+
+| AAAA              | BBBB               |
 |                   |                    |
++-------------------+--------------------+
+|                   |                    |
+| CCCC              | DDDD               |
+|                   |                    |
++-------------------+--------------------+
+
+.. class:: thin
+
++-------------------+--------------------+
+| AAAA              | BBBB               |
 |                   |                    |
 +-------------------+--------------------+
 |                   |                    |
-|                   |                    |
+| CCCC              | DDDD               |
 |                   |                    |
 +-------------------+--------------------+
+
+.. class:: justgrid
+
++-------------------+--------------------+
+| AAAA              | BBBB               |
+|                   |                    |
++-------------------+--------------------+
+|                   |                    |
+| CCCC              | DDDD               |
+|                   |                    |
++-------------------+--------------------+
+
